# agent-bench

./: .dockerignore  .gitignore  .mailmap  CLAUDE.md  DECISIONS.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  render.yaml
agent_bench/: __init__.py
configs/: anthropic.yaml  default.yaml  production.yaml  selfhosted_local.yaml  selfhosted_modal.yaml
docker/: Dockerfile  docker-compose.vllm.yml  docker-compose.yaml
docs/: DESIGN.md  benchmark_report.md  canary_schema.md  judge-design.md  k8s-local-setup.md  langchain_benchmark_anthropic.md  langchain_benchmark_openai.md  provider_comparison.md  retrieval_gate.md  stats-design.md
measurements/: 2026-05-04-judge-calibration-labels.jsonl  2026-05-05-judge-rubric-opus-stress.jsonl  2026-05-06-3a-paraphrase-recency-probe.jsonl  2026-05-06-4a-gpt4o-full-probe.jsonl  2026-05-06-gpt4o-extraction-reasoning-split.md  README.md
modal/: common.py  injection_classifier.py  run_benchmark.py  serve_vllm.py
preflight/: 2026-06-16_wp5-campaign.md  2026-06-22_k8s-campaign.md
results/: calibration_v1_judge_baseline.json  calibration_v1_judge_baseline_no_abstain.json  calibration_v1_judge_baseline_no_anchors.json  calibration_v1_judge_baseline_no_cot.json  calibration_v1_judge_jury_kappa_weighted.json  calibration_v1_judge_jury_kappa_weighted_members.jsonl  calibration_v1_judge_jury_kappa_weighted_v1_1.json  calibration_v1_judge_jury_kappa_weighted_v1_1_1_members.jsonl  calibration_v1_judge_permute.json  calibration_v1_judge_permute_members.jsonl  calibration_v1_system_outputs.json  fastapi_postedit.json  (+10 more)
(+315 files in other folders)
