[project]
name = "agent-bench"
version = "0.1.0"
description = "Evaluation-first agentic RAG system built from API primitives"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0.0,<5.0.0",
    "faiss-cpu>=1.8.0",
    "rank-bm25>=0.2.2",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "simpleeval>=1.0.0",
    "numpy>=1.26.0",
    "langchain>=0.2.0,<1.0.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "respx>=0.21.0",
    "types-PyYAML",
]
modal = [
    "modal>=0.66.0",
]

[tool.setuptools.packages.find]
include = ["agent_bench*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
